Tue Oct 23 15:00:55 2001  David Helder  <dhelder@umich.edu>

	* doc/tmpl/socks.sgml: Added
	* doc/gnet.sgml: Added socks

Tue Oct 23 13:03:09 2001  David Helder  <dhelder@umich.edu>

	* configure.in: Check for pthreads in c_r (for BSD)

Tue Oct 23 10:50:10 2001  David Helder  <dhelder@umich.edu>

	* doc/gnet-sections.txt: Updated
	* *: Doc fixes

	* src/ftp.[ch]: Removed

Tue Oct 23 10:26:17 2001  David Helder  <dhelder@umich.edu>

	* *: Integrate Mark Ferlatte's Unix patch.

Wed Oct 17 22:26:42 2001  David Helder  <dhelder@umich.edu>

	* src/tcp.c: Integrated SOCKS into gnet_tcp_socket_new_async.
	* src/gnet-private.h (_GTcpSocketAsyncState ): Added field
	    for socks server (so it can be changed while the connect
	    is in effect).
	* BUGS: Added note about blocking in tcp_socket_new_async
	    during socks negotiation.
	
	* examples/echoclient.c: Finished async example.
	* test/echoclient-socks.c: Renamed from socksclient.  Now does
	    async too (but set manually)
	
	* src/socks.c (gnet_socks_get_server): Free hostname if port parse
	    fails.

Wed Oct 17 16:48:03 2001  David Helder  <dhelder@umich.edu>

	* src/socks-private.c: Use g_getenv.  Fix missing io channel
	    deref.
	
	* src/socks.c: Cleaned up interface (get/set server and get/set
	    enable).  SOCKS is off by default for now.  Simplified
	    parsing code.
	
	* tests/socksclient.c: Added
 
Sun Oct  7 23:04:29 2001  David Helder  <dhelder@umich.edu>

	* NEWS: Added SOCKS

Sun Oct  7 18:42:05 2001  David Helder  <dhelder@umich.edu>

	* src/socks.[hc]: Added.  Not integrated with TCP yet.
	* src/socks-private.c: Added
	* AUTHORS: Added Marius

	* src/server.c: Include gnet-private before server.  Fixes
	   MAX/MIN warning with param.h

	* src/iochannel.c (gnet_io_channel_writen): buf is now a gpointer.
	* src/iochannel.c (gnet_io_channel_readn): 

Sun Oct  7 17:53:03 2001  David Helder  <dhelder@umich.edu>

	* src/url.[hc]: Integrated David's URL improvements (fragments,