@@ -1,3 +1,7 @@
+Wed Oct 24 15:58:14 2001  David Helder  <dhelder@umich.edu>
+
+	* tests/unpack.c (main): Fix bugs
+
 Tue Oct 23 15:00:55 2001  David Helder  <dhelder@umich.edu>
 
 	* doc/tmpl/socks.sgml: Added
